Update Docker, Docker Compose, Helm Chart and README